--- a/index.html
+++ b/index.html
@@ -249,29 +249,29 @@
   <section class="section" id="ilustracion">
     <div class="container">
       <h2>💡 Ilustración</h2>
-      <div class="grid grid-3">
-        <div class="card">
-          <h3>Materiales completos</h3>
-          <ul class="list">
-            <li><button class="btn" data-pdf="materials/5. Ilustracion.pdf">⬇️ Unidad 5. Ilustración (PDF)</button></li>
-          </ul>
-          <p class="muted">También puedes <a href="materials/5. Ilustracion.pdf" target="_blank" rel="noopener">abrir en pestaña nueva</a>.</p>
-        </div>
-        <div class="card">
-          <h3>Contexto y claves</h3>
-          <ul class="list">
-            <li><b>Autor:</b> Moratín</li>
-            <li><b>Claves:</b> razón pública · reforma · claridad</li>
-            <li><b>Giro:</b> del exceso barroco a la regla/claridad</li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>Cuadernos de la sesión</h3>
-          <p class="muted">Próximamente.</p>
-          <div id="chips-ilustracion"></div>
-          <ul class="list" id="lista-ilustracion"></ul>
-        </div>
+    <div class="grid grid-3">
+      <div class="card">
+        <h3>Materiales completos</h3>
+        <ul class="list">
+          <li><button class="btn" data-pdf="materials/5. Ilustracion.pdf">⬇️ Unidad 5. Ilustración (PDF)</button></li>
+        </ul>
+        <p class="muted">También puedes <a href="materials/5. Ilustracion.pdf" target="_blank" rel="noopener">abrir en pestaña nueva</a>.</p>
       </div>
+      <div class="card">
+        <h3>Contexto y claves</h3>
+        <ul class="list">
+          <li><b>Autor:</b> Moratín</li>
+          <li><b>Claves:</b> razón pública · reforma · claridad</li>
+          <li><b>Giro:</b> del exceso barroco a la regla/claridad</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Cuadernos de la sesión</h3>
+        <p class="muted">Próximamente.</p>
+        <div id="chips-ilustracion"></div>
+        <ul class="list" id="lista-ilustracion"></ul>
+      </div>
+    </div>
     </div>
   </section>
 
@@ -405,7 +405,15 @@
           { t: 'Sesión 1 · Literatura Medieval', href: 'materials/cuadernos/Sesion1_Literatura_Medieval.pdf' },
           { t: 'Sesión 2 · Lírica Medieval', href: 'materials/cuadernos/Sesion2_Lirica_Medieval.pdf' },
           { t: 'Sesión 3 · Cantar de Mio Cid', href: 'materials/cuadernos/Sesion3_Cantar_de_Mio_Cid.pdf' },
-          { t: 'Sesión 4 · Cid vs. Lázaro', href: 'materials/cuadernos/Sesion4_Cid_vs_Lazaro.pdf' },
+
+          { 
+            t: 'Sesión 4 · Cid vs. Lázaro',
+            href: 'materials/cuadernos/Sesion4_Cid_vs_Lazaro.pdf',
+            extra: [
+              { t: 'Prezi: Poema de Mio Cid', link: 'https://prezi.com/j-ant5c0s6f5/poema-de-mio-cid/?present=1' }
+            ]
+          },
+
           { t: 'Sesión 5 · Berceo', href: 'materials/cuadernos/Sesion5_Berceo.pdf' },
           { t: 'Sesión 6 · Arcipreste', href: 'materials/cuadernos/Sesion6_Arcipreste.pdf' },
         ],
@@ -444,7 +452,16 @@
         span.onclick = ()=>{
           document.querySelectorAll('#'+chipsId+' .chip').forEach(c=>c.classList.remove('active'));
           span.classList.add('active');
+
+          // Botón del PDF principal
           list.innerHTML = `<li><button class="btn primary" data-pdf="${s.href}">⬇️ Abrir/descargar (${s.t})</button></li>`;
+
+          // Extras (enlaces externos, como Prezi)
+          if (s.extra && Array.isArray(s.extra)) {
+            s.extra.forEach(e => {
+              list.innerHTML += `<li><a class="btn" href="${e.link}" target="_blank" rel="noopener">🌐 ${e.t}</a></li>`;
+            });
+          }
         };
         chips.appendChild(span);
       });
@@ -493,7 +510,7 @@ DIÁLOGO (máx. 2-3 páginas)
 
 [PERFORMATIVO]
 - Pausas y énfasis si es recital.
-- Entrada/salida si es teatro.
+- Entrada/salida si es teatro o cine.
 `;
 
     const obra = document.getElementById('obra');
