--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
     .viewer .btn{border-color:#334155;background:#fff;color:#0f172a;font-weight:600;padding:.45rem .8rem;border-radius:.65rem;text-decoration:none;display:inline-flex;align-items:center;gap:.4rem}
     .viewer iframe{flex:1;border:0;border-bottom-left-radius:1rem;border-bottom-right-radius:1rem;background:#fff}
     @media (max-width:640px){ .viewer{inset:4% 2%} .viewer .btn{flex:1;justify-content:center;min-width:120px} #fileName{flex-basis:100%;font-size:1rem} }
+
+    /* Frame responsivo para la app de versos */
+    .app-frame{position:relative;width:100%;height:70vh;min-height:520px;border:1px solid var(--border);border-radius:1rem;overflow:hidden;background:#fff}
+    .app-frame iframe{position:absolute;inset:0;width:100%;height:100%;border:0}
+    @media (max-width: 640px){
+      .app-frame{height:65vh;min-height:460px}
+    }
   </style>
 </head>
 <body>
@@ -100,6 +107,7 @@
         <a href="#descargas">Descargas</a>
         <a href="#foro">Foro</a>
         <a href="#miniserie">Miniserie</a>
+        <a href="#versos">Generador de versos</a>
       </div>
       <button class="hamb" id="hamb" aria-label="Abrir menú">☰</button>
     </div>
@@ -113,6 +121,7 @@
         <a href="#descargas">Descargas</a>
         <a href="#foro">Foro</a>
         <a href="#miniserie">Miniserie</a>
+        <a href="#versos">Generador de versos</a>
       </div>
     </div>
   </div>
@@ -335,6 +344,23 @@
     </div>
   </section>
 
+  <!-- GENERADOR DE VERSOS -->
+  <section class="section" id="versos">
+    <div class="container">
+      <h2>🪶 Generador de versos medievales</h2>
+      <div class="card">
+        <p class="muted">Crea pareados, cuaderna vía y variaciones medievales. En móvil, se recomienda girar la pantalla.</p>
+        <div style="display:flex;gap:.5rem;flex-wrap:wrap;margin-bottom:.5rem">
+          <a class="btn primary" href="apps/versos/" target="_blank" rel="noopener">Abrir en pestaña nueva</a>
+          <button class="btn" id="reloadVersos">Recargar vista</button>
+        </div>
+        <div class="app-frame">
+          <iframe id="versosFrame" title="Generador de versos medievales" src="apps/versos/" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer class="footer">
     <div class="container">© <span id="y"></span> Curso: Literatura española hasta el siglo XVIII · Sitio simple (HTML+CSS+JS)</div>
   </footer>
@@ -527,6 +553,12 @@ DIÁLOGO (máx. 2-3 páginas)
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a'); a.href = url; a.download = name; document.body.appendChild(a); a.click();
       setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 0);
+    });
+
+    // Recargar iframe de la app de versos
+    document.getElementById('reloadVersos')?.addEventListener('click', ()=>{
+      const f = document.getElementById('versosFrame');
+      if(f){ f.src = f.src; }
     });
   </script>
 </body>
