--- a/index.html
+++ b/index.html
@@ -351,11 +351,18 @@
       <div class="card">
         <p class="muted">Crea pareados, cuaderna vía y variaciones medievales. En móvil, se recomienda girar la pantalla.</p>
         <div style="display:flex;gap:.5rem;flex-wrap:wrap;margin-bottom:.5rem">
-          <a class="btn primary" href="apps/versos/" target="_blank" rel="noopener">Abrir en pestaña nueva</a>
+          <a class="btn primary" href="https://g0sva8c1k280-deploy.space.z.ai" target="_blank" rel="noopener">Abrir en pestaña nueva</a>
           <button class="btn" id="reloadVersos">Recargar vista</button>
         </div>
         <div class="app-frame">
-          <iframe id="versosFrame" title="Generador de versos medievales" src="apps/versos/" loading="lazy"></iframe>
+          <iframe
+            id="versosFrame"
+            title="Generador de versos medievales"
+            src="https://g0sva8c1k280-deploy.space.z.ai"
+            loading="lazy"
+            allow="clipboard-write; fullscreen"
+            referrerpolicy="no-referrer"
+          ></iframe>
         </div>
       </div>
     </div>
