--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     /* Layout */
     .section{padding:3rem 0;position:relative;overflow:hidden}
     .section > .container{position:relative;z-index:1}
-    /* Capa de imagen (velo suave 0.35) */
     .section::before{
       content:""; position:absolute; inset:0; z-index:0;
       background-position:center; background-repeat:no-repeat; background-size:cover;
@@ -43,7 +42,7 @@
     #barroco{background:var(--barroco)}
     #ilustracion{background:var(--ilustra)}
 
-    /* Imágenes de fondo (añadimos ?v=3 para evitar caché vieja) */
+    /* Imágenes de fondo */
     #edad-media::before{background-image:url("materials/img/edad-media.jpg?v=3")}
     #renacimiento::before{background-image:url("materials/img/renacimiento.jpg?v=3")}
     #cervantes::before{background-image:url("materials/img/cervantes.jpg?v=3")}
@@ -83,13 +82,6 @@
     .viewer .btn{border-color:#334155;background:#fff;color:#0f172a;font-weight:600;padding:.45rem .8rem;border-radius:.65rem;text-decoration:none;display:inline-flex;align-items:center;gap:.4rem}
     .viewer iframe{flex:1;border:0;border-bottom-left-radius:1rem;border-bottom-right-radius:1rem;background:#fff}
     @media (max-width:640px){ .viewer{inset:4% 2%} .viewer .btn{flex:1;justify-content:center;min-width:120px} #fileName{flex-basis:100%;font-size:1rem} }
-
-    /* Frame responsivo para la app de versos */
-    .app-frame{position:relative;width:100%;height:70vh;min-height:520px;border:1px solid var(--border);border-radius:1rem;overflow:hidden;background:#fff}
-    .app-frame iframe{position:absolute;inset:0;width:100%;height:100%;border:0}
-    @media (max-width: 640px){
-      .app-frame{height:65vh;min-height:460px}
-    }
   </style>
 </head>
 <body>
@@ -288,16 +280,16 @@
   <section class="section" id="descargas">
     <div class="container">
       <h2>📥 Descargas</h2>
-      <div class="card">
-        <table>
-          <thead><tr><th>Documento</th><th>Acción</th></tr></thead>
-          <tbody>
-            <tr><td>Syllabus del curso</td><td><button class="btn" data-pdf="materials/syllabus.pdf">Abrir/descargar</button></td></tr>
-            <tr><td>Programa detallado sesión a sesión</td><td><button class="btn" data-pdf="materials/programa-detallado.pdf">Abrir/descargar</button></td></tr>
-            <tr><td>Cuaderno de actividades (general)</td><td><button class="btn" data-pdf="materials/cuadernos/Modulo1_Literatura_Medieval.pdf">Abrir/descargar</button></td></tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="card">
+      <table>
+        <thead><tr><th>Documento</th><th>Acción</th></tr></thead>
+        <tbody>
+          <tr><td>Syllabus del curso</td><td><button class="btn" data-pdf="materials/syllabus.pdf">Abrir/descargar</button></td></tr>
+          <tr><td>Programa detallado sesión a sesión</td><td><button class="btn" data-pdf="materials/programa-detallado.pdf">Abrir/descargar</button></td></tr>
+          <tr><td>Cuaderno de actividades (general)</td><td><button class="btn" data-pdf="materials/cuadernos/Modulo1_Literatura_Medieval.pdf">Abrir/descargar</button></td></tr>
+        </tbody>
+      </table>
+    </div>
     </div>
   </section>
 
@@ -344,26 +336,13 @@
     </div>
   </section>
 
-  <!-- GENERADOR DE VERSOS -->
+  <!-- GENERADOR DE VERSOS (sólo botón externo) -->
   <section class="section" id="versos">
     <div class="container">
       <h2>🪶 Generador de versos medievales</h2>
       <div class="card">
-        <p class="muted">Crea pareados, cuaderna vía y variaciones medievales. En móvil, se recomienda girar la pantalla.</p>
-        <div style="display:flex;gap:.5rem;flex-wrap:wrap;margin-bottom:.5rem">
-          <a class="btn primary" href="https://g0sva8c1k280-deploy.space.z.ai" target="_blank" rel="noopener">Abrir en pestaña nueva</a>
-          <button class="btn" id="reloadVersos">Recargar vista</button>
-        </div>
-        <div class="app-frame">
-          <iframe
-            id="versosFrame"
-            title="Generador de versos medievales"
-            src="https://g0sva8c1k280-deploy.space.z.ai"
-            loading="lazy"
-            allow="clipboard-write; fullscreen"
-            referrerpolicy="no-referrer"
-          ></iframe>
-        </div>
+        <p class="muted">Abre el generador en una pestaña nueva.</p>
+        <a class="btn primary" href="https://g0sva8c1k280-deploy.space.z.ai/" target="_blank" rel="noopener">Abrir generador externo</a>
       </div>
     </div>
   </section>
@@ -431,22 +410,18 @@
       }
     });
 
-    // Cuadernos
+    // Cuadernos (igual que antes)
     const CUADERNOS = {
       "Edad Media": {
         sesiones: [
           { t: 'Sesión 1 · Literatura Medieval', href: 'materials/cuadernos/Sesion1_Literatura_Medieval.pdf' },
           { t: 'Sesión 2 · Lírica Medieval', href: 'materials/cuadernos/Sesion2_Lirica_Medieval.pdf' },
           { t: 'Sesión 3 · Cantar de Mio Cid', href: 'materials/cuadernos/Sesion3_Cantar_de_Mio_Cid.pdf' },
-
           { 
             t: 'Sesión 4 · Cid vs. Lázaro',
             href: 'materials/cuadernos/Sesion4_Cid_vs_Lazaro.pdf',
-            extra: [
-              { t: 'Prezi: Poema de Mio Cid', link: 'https://prezi.com/j-ant5c0s6f5/poema-de-mio-cid/?present=1' }
-            ]
+            extra: [{ t: 'Prezi: Poema de Mio Cid', link: 'https://prezi.com/j-ant5c0s6f5/poema-de-mio-cid/?present=1' }]
           },
-
           { t: 'Sesión 5 · Berceo', href: 'materials/cuadernos/Sesion5_Berceo.pdf' },
           { t: 'Sesión 6 · Arcipreste', href: 'materials/cuadernos/Sesion6_Arcipreste.pdf' },
         ],
@@ -485,11 +460,7 @@
         span.onclick = ()=>{
           document.querySelectorAll('#'+chipsId+' .chip').forEach(c=>c.classList.remove('active'));
           span.classList.add('active');
-
-          // Botón del PDF principal
           list.innerHTML = `<li><button class="btn primary" data-pdf="${s.href}">⬇️ Abrir/descargar (${s.t})</button></li>`;
-
-          // Extras (enlaces externos, como Prezi)
           if (s.extra && Array.isArray(s.extra)) {
             s.extra.forEach(e => {
               list.innerHTML += `<li><a class="btn" href="${e.link}" target="_blank" rel="noopener">🌐 ${e.t}</a></li>`;
@@ -523,7 +494,7 @@
     renderCuadernos('Edad Media','chips-edad-media','lista-edad-media');
     renderCuadernos('Renacimiento','chips-renacimiento','lista-renacimiento');
 
-    // Miniserie
+    // Miniserie (descarga .txt)
     const plantilla = (obra) => `# ${obra} — Guion breve (B1)
 
 Título de la escena:
@@ -545,7 +516,6 @@ DIÁLOGO (máx. 2-3 páginas)
 - Pausas y énfasis si es recital.
 - Entrada/salida si es teatro o cine.
 `;
-
     const obra = document.getElementById('obra');
     const titulo = document.getElementById('titulo');
     const sinopsis = document.getElementById('sinopsis');
@@ -560,12 +530,6 @@ DIÁLOGO (máx. 2-3 páginas)
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a'); a.href = url; a.download = name; document.body.appendChild(a); a.click();
       setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 0);
-    });
-
-    // Recargar iframe de la app de versos
-    document.getElementById('reloadVersos')?.addEventListener('click', ()=>{
-      const f = document.getElementById('versosFrame');
-      if(f){ f.src = f.src; }
     });
   </script>
 </body>
