--- a/index.html
+++ b/index.html
@@ -29,21 +29,20 @@
     /* Layout */
     .section{padding:3rem 0;position:relative;overflow:hidden}
     .section > .container{position:relative;z-index:1}
-    /* Capa de imagen (velo suave 0.35) */
     .section::before{
       content:""; position:absolute; inset:0; z-index:0;
       background-position:center; background-repeat:no-repeat; background-size:cover;
       opacity:.35;
     }
 
-    /* Colores base (por si no hay imagen) */
+    /* Colores base */
     #edad-media{background:var(--medieval)}
     #renacimiento{background:var(--rena)}
     #cervantes{background:var(--cerv)}
     #barroco{background:var(--barroco)}
     #ilustracion{background:var(--ilustra)}
 
-    /* Imágenes de fondo (añadimos ?v=3 para evitar caché vieja) */
+    /* Fondos */
     #edad-media::before{background-image:url("materials/img/edad-media.jpg?v=3")}
     #renacimiento::before{background-image:url("materials/img/renacimiento.jpg?v=3")}
     #cervantes::before{background-image:url("materials/img/cervantes.jpg?v=3")}
@@ -84,7 +83,7 @@
     .viewer iframe{flex:1;border:0;border-bottom-left-radius:1rem;border-bottom-right-radius:1rem;background:#fff}
     @media (max-width:640px){ .viewer{inset:4% 2%} .viewer .btn{flex:1;justify-content:center;min-width:120px} #fileName{flex-basis:100%;font-size:1rem} }
 
-    /* Frame responsivo para la app de versos */
+    /* Frame app versos */
     .app-frame{position:relative;width:100%;height:70vh;min-height:520px;border:1px solid var(--border);border-radius:1rem;overflow:hidden;background:#fff}
     .app-frame iframe{position:absolute;inset:0;width:100%;height:100%;border:0}
     @media (max-width: 640px){
@@ -258,29 +257,29 @@
   <section class="section" id="ilustracion">
     <div class="container">
       <h2>💡 Ilustración</h2>
-    <div class="grid grid-3">
-      <div class="card">
-        <h3>Materiales completos</h3>
-        <ul class="list">
-          <li><button class="btn" data-pdf="materials/5. Ilustracion.pdf">⬇️ Unidad 5. Ilustración (PDF)</button></li>
-        </ul>
-        <p class="muted">También puedes <a href="materials/5. Ilustracion.pdf" target="_blank" rel="noopener">abrir en pestaña nueva</a>.</p>
+      <div class="grid grid-3">
+        <div class="card">
+          <h3>Materiales completos</h3>
+          <ul class="list">
+            <li><button class="btn" data-pdf="materials/5. Ilustracion.pdf">⬇️ Unidad 5. Ilustración (PDF)</button></li>
+          </ul>
+          <p class="muted">También puedes <a href="materials/5. Ilustracion.pdf" target="_blank" rel="noopener">abrir en pestaña nueva</a>.</p>
+        </div>
+        <div class="card">
+          <h3>Contexto y claves</h3>
+          <ul class="list">
+            <li><b>Autor:</b> Moratín</li>
+            <li><b>Claves:</b> razón pública · reforma · claridad</li>
+            <li><b>Giro:</b> del exceso barroco a la regla/claridad</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="muted">Próximamente.</p>
+          <div id="chips-ilustracion"></div>
+          <ul class="list" id="lista-ilustracion"></ul>
+        </div>
       </div>
-      <div class="card">
-        <h3>Contexto y claves</h3>
-        <ul class="list">
-          <li><b>Autor:</b> Moratín</li>
-          <li><b>Claves:</b> razón pública · reforma · claridad</li>
-          <li><b>Giro:</b> del exceso barroco a la regla/claridad</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>Cuadernos de la sesión</h3>
-        <p class="muted">Próximamente.</p>
-        <div id="chips-ilustracion"></div>
-        <ul class="list" id="lista-ilustracion"></ul>
-      </div>
-    </div>
     </div>
   </section>
 
@@ -427,7 +426,7 @@
       }
     });
 
-    // Cuadernos
+    // ---- Cuadernos (con Berceo + PPTX en Sesión 5) ----
     const CUADERNOS = {
       "Edad Media": {
         sesiones: [
@@ -447,12 +446,10 @@
             t: 'Sesión 5 · Berceo',
             href: 'materials/cuadernos/Sesion5_Berceo.pdf',
             extra: [
-              { 
-                t: 'Actividad: Gonzalo de Berceo (externa)', 
-                link: 'https://www.perplexity.ai/search/i-need-to-implement-this-propu-G8R.GrYzQg.SI9bZy41SEw?1=d#1' 
-              }
+              { t: 'Presentación: Gonzalo de Berceo (PPTX)', link: 'materials/cuadernos/Gonzalo_de_Berceo.pptx' }
             ]
           },
+
           { t: 'Sesión 6 · Arcipreste', href: 'materials/cuadernos/Sesion6_Arcipreste.pdf' },
         ],
         extras: [
@@ -494,7 +491,7 @@
           // Botón del PDF principal
           list.innerHTML = `<li><button class="btn primary" data-pdf="${s.href}">⬇️ Abrir/descargar (${s.t})</button></li>`;
 
-          // Extras (enlaces externos, como Prezi/actividad)
+          // Extras (enlaces externos o archivos no-PDF, como PPTX)
           if (s.extra && Array.isArray(s.extra)) {
             s.extra.forEach(e => {
               list.innerHTML += `<li><a class="btn" href="${e.link}" target="_blank" rel="noopener">🌐 ${e.t}</a></li>`;
