--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
             t: 'Sesión 5 · Berceo',
             href: 'materials/cuadernos/Sesion5_Berceo.pdf',
             extra: [
+              { t: 'Actividad: Gonzalo de Berceo (en Perplexity)', link: 'https://www.perplexity.ai/search/i-need-to-implement-this-propu-G8R.GrYzQg.SI9bZy41SEw?1=d#1' },
               { t: 'Presentación: Gonzalo de Berceo (PPTX)', link: 'materials/cuadernos/Gonzalo_de_Berceo.pptx' }
             ]
           },
