--- a/index.html
+++ b/index.html
@@ -451,7 +451,13 @@
             ]
           },
 
-          { t: 'Sesión 6 · Arcipreste', href: 'materials/cuadernos/Sesion6_Arcipreste.pdf' },
+          { 
+            t: 'Sesión 6 · Arcipreste',
+            href: 'materials/cuadernos/Sesion6_Arcipreste.pdf',
+            extra: [
+              { t: 'Presentación: El Arcipreste de Hita', link: 'materials/cuadernos/slide1.html' }
+            ]
+          },
         ],
         extras: [
           { t: 'Módulo 1 · Literatura Medieval', href: 'materials/cuadernos/Modulo1_Literatura_Medieval.pdf' },
