--- a/materials/presentaciones/Buen_Amor/slide3.html
+++ b/materials/presentaciones/Buen_Amor/slide3.html
@@ -224,5 +224,13 @@
             </div>
         </div>
     </div>
+    <!-- Navegación -->
+<div class="navigation" style="position: fixed; bottom: 20px; width: 100%; text-align: center; z-index: 1000;">
+    <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
+    <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
+</div>
+
+<!-- Cargar el script de navegación -->
+<script src="navigation.js"></script>
 </body>
 </html>
