--- a/materials/presentaciones/Buen_Amor/slide2.html
+++ b/materials/presentaciones/Buen_Amor/slide2.html
@@ -136,7 +136,7 @@
                     Actividad de calentamiento
                 </h2>
                 <div class="activity-description">
-                    <strong>En la pizarra, haz una columna "Berceo" y otra "Juan Ruiz". Pide a los estudiantes que digan palabras que asocien con cada uno basándose en la clase pasada.</strong>
+                    <strong>En la pizarra, hay una columna "Berceo" y otra "Juan Ruiz". Vamos a pensar en palabras asociadas con cada uno basándonos en la clase pasada.</strong>
                 </div>
             </div>
             
