--- a/materials/presentaciones/Buen_Amor/slide1.html
+++ b/materials/presentaciones/Buen_Amor/slide1.html
@@ -17,10 +17,11 @@
             color: #3a2a1a;
             background-color: #f5f0e6;
             overflow: hidden;
+            display: flex; /* Cambiado a flex para alinear slide y menú */
         }
         .slide {
-            width: 1280px;
-            height: 720px;
+            width: 1000px; /* Reducido para hacer espacio al menú */
+            height: 100vh;
             position: relative;
             background-image: url('https://sfile.chatglm.cn/images-ppt/f71869bec81e.jpg');
             background-size: cover;
@@ -29,6 +30,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            flex-shrink: 0; /* Evita que el slide se encoja */
         }
         .overlay {
             position: absolute;
@@ -64,6 +66,47 @@
             background-color: #c9a97e;
             margin: 30px 0;
         }
+
+        /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
+        .side-menu {
+            width: 280px;
+            height: 100vh;
+            background-color: rgba(58, 42, 26, 0.95);
+            color: #f5f0e6;
+            z-index: 2000;
+            padding-top: 20px;
+            overflow-y: auto;
+            box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+            flex-shrink: 0; /* Evita que el menú se encoja */
+        }
+        .menu-content h3 {
+            padding: 0 20px;
+            margin-bottom: 15px;
+            font-family: 'Cinzel', serif;
+            font-size: 1.2em;
+            color: #c9a97e;
+        }
+        #menuList {
+            list-style: none;
+            padding: 0;
+        }
+        #menuList li a {
+            display: block;
+            padding: 12px 20px;
+            color: #e6d7c3;
+            text-decoration: none;
+            font-size: 15px;
+            transition: background-color 0.2s, color 0.2s;
+            border-bottom: 1px solid rgba(201, 169, 126, 0.2);
+        }
+        #menuList li a:hover {
+            background-color: rgba(201, 169, 126, 0.2);
+        }
+        #menuList li a.active {
+            background-color: #c9a97e;
+            color: #3a2a1a;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -75,12 +118,21 @@
         </div>
     </div>
 
-    <!-- ================================================= -->
-    <!-- ====== AQUÍ ESTÁ EL CÓDIGO QUE FALTABA ========= -->
-    <!-- ================================================= -->
-    
-    <!-- Navegación -->
-    <div class="navigation" style="position: fixed; bottom: 20px; width: 100%; text-align: center; z-index: 1000;">
+    <!-- ======================================= -->
+    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
+    <!-- ======================================= -->
+
+    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
+    <div id="sideMenu" class="side-menu">
+        <div class="menu-content">
+            <h3>Índice</h3>
+            <ul id="menuList"></ul>
+        </div>
+    </div>
+
+    <!-- Navegación Inferior (Anterior/Siguiente) -->
+    <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
+        <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
         <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
     </div>
 
