--- a/materials/presentaciones/Buen_Amor/slide2.html
+++ b/materials/presentaciones/Buen_Amor/slide2.html
@@ -172,16 +172,12 @@
             </div>
         </div>
     </div>
-    <!-- Navegación -->
-<div class="navigation" style="position: fixed; bottom: 20px; width: 100%; text-align: center; z-index: 1000;">
-    <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
-    <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
-</div>
+    
+       <!-- ======================================= -->
+    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
+    <!-- ======================================= -->
 
-<!-- Cargar el script de navegación -->
-<script src="navigation.js"></script>
-
-        <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
+    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
     <div id="sideMenu" class="side-menu">
         <div class="menu-content">
             <h3>Índice</h3>
