--- a/materials/presentaciones/Buen_Amor/slide3.html
+++ b/materials/presentaciones/Buen_Amor/slide3.html
@@ -270,6 +270,17 @@
             </div>
         </div>
     </div>
+   <!-- ======================================= -->
+    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
+    <!-- ======================================= -->
+
+    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
+    <div id="sideMenu" class="side-menu">
+        <div class="menu-content">
+            <h3>Índice</h3>
+            <ul id="menuList"></ul>
+        </div>
+    </div>
 
     <!-- Navegación Inferior (Anterior/Siguiente) -->
     <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
