--- a/materials/presentaciones/Buen_Amor/slide14.html
+++ b/materials/presentaciones/Buen_Amor/slide14.html
@@ -16,15 +16,21 @@
             font-family: 'Crimson Text', serif;
             color: #3a2a1a;
             background-color: #f5f0e6;
+            overflow: hidden;
+            display: flex; /* Cambiado a flex para alinear slide y menú */
         }
         .slide {
-            width: 1280px;
-            min-height: 720px;
+            width: 1000px; /* Reducido para hacer espacio al menú */
+            height: 100vh;
             position: relative;
-            overflow: hidden;
-            background-color: #f5f0e6;
+            background-image: url('https://sfile.chatglm.cn/images-ppt/f71869bec81e.jpg');
+            background-size: cover;
+            background-position: center;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            flex-shrink: 0; /* Evita que el slide se encoja */
         }
         .header {
             padding: 40px 70px 20px;
@@ -268,6 +274,46 @@
             border-radius: 4px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
+        /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
+.side-menu {
+    width: 280px;
+    height: 100vh;
+    background-color: rgba(58, 42, 26, 0.95);
+    color: #f5f0e6;
+    z-index: 2000;
+    padding-top: 20px;
+    overflow-y: auto;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+    flex-shrink: 0;
+}
+.menu-content h3 {
+    padding: 0 20px;
+    margin-bottom: 15px;
+    font-family: 'Cinzel', serif;
+    font-size: 1.2em;
+    color: #c9a97e;
+}
+#menuList {
+    list-style: none;
+    padding: 0;
+}
+#menuList li a {
+    display: block;
+    padding: 12px 20px;
+    color: #e6d7c3;
+    text-decoration: none;
+    font-size: 15px;
+    transition: background-color 0.2s, color 0.2s;
+    border-bottom: 1px solid rgba(201, 169, 126, 0.2);
+}
+#menuList li a:hover {
+    background-color: rgba(201, 169, 126, 0.2);
+}
+#menuList li a.active {
+    background-color: #c9a97e;
+    color: #3a2a1a;
+    font-weight: bold;
+}
     </style>
 </head>
 <body>
@@ -416,12 +462,25 @@
             </div>
         </div>
     </div>
-    <!-- Navegación -->
-<div class="navigation" style="position: fixed; bottom: 20px; width: 100%; text-align: center; z-index: 1000;">
-    <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
-</div>
+  <!-- ======================================= -->
+    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
+    <!-- ======================================= -->
 
-<!-- Cargar el script de navegación -->
-<script src="navigation.js"></script>
+    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
+    <div id="sideMenu" class="side-menu">
+        <div class="menu-content">
+            <h3>Índice</h3>
+            <ul id="menuList"></ul>
+        </div>
+    </div>
+
+    <!-- Navegación Inferior (Anterior/Siguiente) -->
+    <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
+        <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
+        <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
+    </div>
+
+    <!-- Cargar el script de navegación -->
+    <script src="navigation.js"></script>
 </body>
 </html>
