Create initial HTML structure for presentation

--- a/materials/presentaciones/renacimiento/index.html
+++ b/materials/presentaciones/renacimiento/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Presentación</title>
+    <style>
+        /* Estilos simples para que se vea centrado y agradable */
+        body {
+            font-family: sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+            background-color: white;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .start-button {
+            display: inline-block;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .start-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
 
+    <div class="container">
+        <h1>¡Bienvenido a mi Presentación!</h1>
+        <p>Haz clic en el botón para comenzar.</p>
+        <a href="slide1.html" class="start-button">Comenzar Presentación</a>
+    </div>
+
+</body>
+</html>
