--- a/index.html
+++ b/index.html
@@ -467,7 +467,11 @@
       },
       "Renacimiento": {
         sesiones: [
-          { t: 'Sesión 7 · Renacimiento', href: 'materials/cuadernos/Sesion7_Renacimiento.pdf' },
+          { t: 'Sesión 7 · Renacimiento', href: 'materials/cuadernos/Sesion7_Renacimiento.pdf',
+           extra: [
+              { t: 'Presentación: De la Edad Media al Renacimiento', link: 'materials/presentaciones/renacimiento/index.html' }
+            ]
+          },
           { t: 'Sesión 8 · Garcilaso', href: 'materials/cuadernos/Sesion8_Garcilaso.pdf' },
           { t: 'Sesión 9 · Fray Luis & San Juan', href: 'materials/cuadernos/Sesion9_FrayLuis_SanJuan.pdf' },
         ],
