Add background image to slide 12

--- a/materials/presentaciones/renacimiento/slide12.html
+++ b/materials/presentaciones/renacimiento/slide12.html
@@ -23,6 +23,7 @@
             width: 1000px; /* Reducido para hacer espacio al menú */
             height: 100vh;
             position: relative;
+            background-image: url('https://sfile.chatglm.cn/images-ppt/f71869bec81e.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
